--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -3,42 +3,51 @@
 # image will be published to ghcr.io/<user>/<name>
 name: arn-wayblue-river
 # description will be included in the image's metadata
-description: This is my personal OS image.
+description: This is the personal OS image of Ashiqur Rahman Niloy (ashiq.r.niloy@gmail.com)
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 41 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/wayblueorg/river
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - type: files
-    files:
-      - source: system
-        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+#  - type: files
+#    files:
+#      - source: system
+#        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
   - type: rpm-ostree
     repos:
-      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-41/atim-starship-fedora-41.repo
+      - https://copr.fedorainfracloud.org/coprs/areif-dev/river-bsp-layout/repo/fedora-41/areif-dev-river-bsp-layout-fedora-41.repo
     install:
-      - micro
+      - river-bsp-layout
       - starship
+      - emacs
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
       - firefox
       - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
 
-  - type: default-flatpaks
-    notify: true # Send notification after install/uninstall is finished (true/false)
-    system:
-      # If no repo information is specified, Flathub will be used by default
-      install:
-        - org.mozilla.firefox
-        - org.gnome.Loupe
-      remove:
-        - org.gnome.eog
-    user: {} # Also add Flathub user repo, but no user packages
+  - type: brew
+    nofile-limits: true
+    brew-analytics: false
+
+# chezmoi
+# systemd service for emacs
+
+#  - type: default-flatpaks
+#    notify: true # Send notification after install/uninstall is finished (true/false)
+#    system:
+#      # If no repo information is specified, Flathub will be used by default
+#      install:
+#        - org.mozilla.firefox
+#        - org.gnome.Loupe
+#      remove:
+#        - org.gnome.eog
+#    user: {} # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
 
