--- a/recipe.yml
+++ b/recipe.yml
@@ -17,21 +17,14 @@ modules:
 #      - source: system
 #        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
 
-  - type: script
-    snippets:
-      - FEDORA_VERSION=$(rpm -E %fedora) # get current Fedora version
-      - curl -o /etc/yum.repos.d/_copr:alternateved:keyd.repo https://copr.fedorainfracloud.org/coprs/alternateved/keyd/repo/fedora-"$FEDORA_VERSION"/alternateved-keyd-fedora-"$FEDORA_VERSION".repo
   - type: rpm-ostree
     repos:
       - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-41/atim-starship-fedora-41.repo
+      - https://copr.fedorainfracloud.org/coprs/areif-dev/river-bsp-layout/repo/fedora-41/areif-dev-river-bsp-layout-fedora-41.repo
     install:
+      - river-bsp-layout
       - starship
       - emacs
-      - docker-compose
-      - podman-compose
-      - swaybg
-      - swayidle
-      - keyd
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
