--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -29,9 +29,8 @@ modules:
       - emacs
       - docker-compose
       - podman-compose
-      - swaybg
-      - swayidle
       - keyd
+      - helix
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
