updated config for keyd

--- a/files/system/etc/keyd/default.conf
+++ b/files/system/etc/keyd/default.conf
@@ -1,11 +1,11 @@
-[id]
+[ids]
 
 *
 
 [main]
 
 # Maps capslock to control
-capslock = control
+capslock = layer(control)
 
 # Maps left control to capslock
 leftcontrol = capslock
