--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -32,6 +32,7 @@ modules:
       - keyd
       - helix
       - swaybg
+      - xlsclients
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
