--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -26,13 +26,13 @@ modules:
       - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-41/atim-starship-fedora-41.repo
     install:
       - starship
-      - emacs
       - docker-compose
       - podman-compose
       - keyd
       - helix
       - swaybg
       - xlsclients
+      - wlopm
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
