Added snapd for Raindrop and Whatsapp

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -33,6 +33,7 @@ modules:
       - swaybg
       - xlsclients
       - wlopm
+      - snapd
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
