--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -34,6 +34,7 @@ modules:
       - xlsclients
       - wlopm
       - snapd
+      - syncthing
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
