Added SDDM Breeze theme

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -34,6 +34,7 @@ modules:
       - xlsclients
       - wlopm
       - syncthing
+      - sddm-breeze
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
