--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -35,6 +35,9 @@ modules:
       - wlopm
       - syncthing
       - sddm-breeze
+      - wayland-utils
+      - fuzzel
+      - mako
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
