Removed dunst, rofi-wayland, wayland utils

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -35,7 +35,6 @@ modules:
       - wlopm
       - syncthing
       - sddm-breeze
-      - wayland-utils
       - fuzzel
       - mako
     remove:
@@ -43,6 +42,8 @@ modules:
       # "firefox" is the main package, "firefox-langpacks" is a dependency
       - firefox
       - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - dunst
+      - rofi-wayland
 
   - type: brew
     nofile-limits: true
