--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -34,8 +34,8 @@ modules:
       - xlsclients
       - syncthing
       - sddm-breeze
-      - rofi-wayland
       - mako
+      - keepassxc
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
