--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -35,6 +35,7 @@ modules:
       - syncthing
       - sddm-breeze
       - mako
+      - flameshot
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
